--- a/Views/Account/Registro.cshtml
+++ b/Views/Account/Registro.cshtml
@@ -30,5 +30,6 @@
             <label for="exampleInputEmail1">Telefono</label>
             <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Telephone" name="_tel">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button> 
+        <a href='@Url.Action("Login","Account")'>¿Ya tenes una cuenta? Iniciá sesión</a>
 </form>
