--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <a href='@Url.Action("Registro","Account")'>Registrarse</a>
+    <h1><a href='@Url.Action("Login","Account")'>Iniciar sesión</a></h1>
+    <h1><a href='@Url.Action("Registro","Account")'>Registrarse</a></h1>
+
 </div>
