falta arreglar obtener por nombre en el bd, arreglar el bienvenida en las views y hacer lo de js

--- a/Views/Account/Olvide.cshtml
+++ b/Views/Account/Olvide.cshtml
@@ -4,5 +4,15 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <form action='@Url.Action("OlvideMiContra")' method="post">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Username</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username" name="_username">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button> 
+    </form>
+
+
 </div>
+
