--- a/Views/Account/Contrasenia.cshtml
+++ b/Views/Account/Contrasenia.cshtml
@@ -1,9 +1,8 @@
 @{
-    ViewData["Title"] = "Olvidaste tu contraseña pelotudo";
+    ViewData["Title"] = "Tu contraseña";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Tu contraseña es @ViewBag.contra</h1>
-
+    <h3 class="display-4">Tu contraseña es @ViewBag.contra</h1>
 </div>
 
