--- a/Views/Account/Respuesta.cshtml
+++ b/Views/Account/Respuesta.cshtml
@@ -1,5 +1,10 @@
+@{
+    ViewData["Title"] = "!!";
+}
 
-<h1>@ViewBag.txt</h1>
+<div class="text-center">
+    <h3 class="display-4">@ViewBag.txt</h3>
+</div>
 <h4>
     @{
         if (@ViewBag.txt=="Registro exitoso"){
