--- a/Views/Account/Registro.cshtml
+++ b/Views/Account/Registro.cshtml
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Contraseña</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter Password" name="_contra">
+            <input type="password" class="form-control" id="contrasenia" placeholder="Enter Password" name="_contra">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Repite la contraseña</label>
@@ -30,6 +30,6 @@
             <label for="exampleInputEmail1">Telefono</label>
             <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Telephone" name="_tel">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button> 
+        <button type="submit" class="btn btn-primary" id="boton" >Submit</button> 
         <a href='@Url.Action("Login","Account")'>¿Ya tenes una cuenta? Iniciá sesión</a>
 </form>
